--- a/labWPF/WpfApp1/MainWindow.xaml
+++ b/labWPF/WpfApp1/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <TextBox x:Name="Tb1" HorizontalAlignment="Left" Height="124" Margin="56,73,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120" RenderTransformOrigin="0.5,0.5">
+        <TextBox x:Name="Tb1" HorizontalAlignment="Left" Height="124" Margin="56,73,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" RenderTransformOrigin="0.5,0.5">
             <TextBox.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
